ECOSENT-916 show selected item menu from LS; correct css selected & img like icon & icon align; update highlight items

--- a/src/components/Sidebar/style.scss
+++ b/src/components/Sidebar/style.scss
@@ -71,6 +71,30 @@
 
     &:hover {
       background: $color-gray-25;
+
+      #{$menu-item}__point {
+        border-color: $color-gray-25;
+      }
+    }
+
+    &#{$menu-item}_selected:not(#{$menu-item}_expanded):not(:hover) {
+      background: $color-blue-light;
+
+      #{$menu-item}__icon,
+      #{$menu-item}__label,
+      #{$menu-item}__toggle {
+        color: $color-white;
+      }
+
+      #{$menu-item}__badge {
+        background: $color-white;
+        color: $text-color-gray;
+      }
+
+      #{$menu-item}__point {
+        background: $color-white;
+        border-color: $color-blue-light;
+      }
     }
 
     &__toggle {
@@ -80,7 +104,7 @@
 
       &_h {
         position: absolute;
-        right: 0;
+        right: 5px;
       }
     }
 
@@ -93,10 +117,16 @@
     &__icon {
       color: $text-color-gray;
       font-size: $font-size-extra-large !important;
+      min-width: 25px;
+      text-align: center;
     }
 
     &__icon-img {
-      width: 20px;
+      min-width: 20px;
+      max-width: 20px;
+      max-height: 20px;
+      background-repeat: no-repeat;
+      background-size: cover;
     }
 
     &__label {
@@ -105,6 +135,8 @@
       color: $text-color-dark;
       font-weight: $font-weight-bold;
       font-size: $font-size-standard;
+      opacity: 1;
+      transition: opacity 0.4s;
     }
 
     &__icon + &__label {
@@ -129,7 +161,7 @@
       border: 4px solid $color-white;
       border-radius: 50%;
       position: absolute;
-      left: 30px;
+      right: 15px;
       top: 0;
       opacity: 1;
       transition: opacity 0.4s;
@@ -180,16 +212,6 @@
         &#{$menu-item}_expanded:not(:hover) {
           background: $color-gray-4;
         }
-
-        &#{$menu-item}_selected:not(:hover) {
-          background: $color-blue-light;
-
-          #{$menu-item}__icon,
-          #{$menu-item}__label,
-          #{$menu-item}__toggle {
-            color: $color-white;
-          }
-        }
       }
     }
 
@@ -226,10 +248,7 @@
       #{$menu-item}_lvl-3 {
         height: 25px;
         padding: 0 9px;
-
-        &:hover {
-          border-radius: $border-radius-standard;
-        }
+        border-radius: $border-radius-standard;
 
         &:last-child {
           margin-bottom: 12px;
@@ -248,12 +267,13 @@
         opacity: 1;
       }
 
-      & &-inner {
+      & &-inner.tooltip-inner {
         box-shadow: 0 1px 5px rgba(0, 0, 0, 0.2), 0 3px 4px rgba(0, 0, 0, 0.12), 0 2px 4px rgba(0, 0, 0, 0.14);
         border-radius: $border-radius-extra-large;
         background-color: $color-white;
         text-align: left;
         padding: 0;
+        margin: 0;
       }
 
       & &-arrow {
@@ -304,15 +324,8 @@
   &_collapsed {
     #{$menu-list}_lvl-1 {
       #{$menu-item}_lvl-1 {
-        margin: 0 11px;
-        padding: 0 15px;
-        width: initial;
-        border-radius: $border-radius-large;
-
-        &:hover {
-          #{$menu-item}__point {
-            border: 4px solid $color-gray-25;
-          }
+        #{$menu-item}__label {
+          opacity: 0;
         }
       }
     }
